Import funguloids-linux-1.05f.tar.bz2 (version 1.05f)
These files have been unpacked:

bin/bootstrap.mpk
bin/funguloids.mpk

These files have been converted:

bin/funguloids/whiteglow2.dds
bin/funguloids/bg2.dds
bin/funguloids/bg4.dds
bin/funguloids/bg8.dds
bin/funguloids/bg1.dds
bin/funguloids/fieryglow.dds
bin/funguloids/bg5.dds
bin/funguloids/bg3.dds
bin/funguloids/whiteglow.dds
bin/funguloids/bg7.dds
bin/funguloids/bg6.dds
bin/funguloids/logo.dds
bin/funguloids/Plane.mesh
bin/funguloids/Drop.mesh
bin/funguloids/Tentacle.mesh
bin/funguloids/Asteroid1.mesh
bin/funguloids/Base.mesh
bin/funguloids/Whirler.mesh
bin/funguloids/Mushroom.mesh
bin/funguloids/Asteroid2.mesh
bin/funguloids/Asteroid3.mesh
bin/funguloids/WormBall.mesh
bin/funguloids/Base-Armature.skeleton

These files have been deleted:

bin/bootstrap.mpk
bin/funguloids.mpk
bin/funguloids/whiteglow2.dds
bin/funguloids/bg2.dds
bin/funguloids/bg4.dds
bin/funguloids/bg8.dds
bin/funguloids/bg1.dds
bin/funguloids/fieryglow.dds
bin/funguloids/bg5.dds
bin/funguloids/bg3.dds
bin/funguloids/whiteglow.dds
bin/funguloids/bg7.dds
bin/funguloids/bg6.dds
bin/funguloids/logo.dds
bin/funguloids/Plane.mesh
bin/funguloids/Drop.mesh
bin/funguloids/Tentacle.mesh
bin/funguloids/Asteroid1.mesh
bin/funguloids/Base.mesh
bin/funguloids/Whirler.mesh
bin/funguloids/Mushroom.mesh
bin/funguloids/Asteroid2.mesh
bin/funguloids/Asteroid3.mesh
bin/funguloids/WormBall.mesh
bin/funguloids/Base-Armature.skeleton
include/SimpleIni
bin/bootstrap/VeraIt.ttf
bin/bootstrap/Vera.ttf
bin/bootstrap/VeraBd.ttf
bin/bootstrap/VeraBI.ttf
obj/empty
obj

--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,12 @@
 "Those Funny Funguloids!"
 Copyright (c) 2006-2007, Mika Halttunen & Teemu Ruokolainen
 
+------------------
+UPDATED: The initial release had the bloom accidently disabled,
+it's been fixed in this release. Also, now the Linux build will use
+ALSA by default. Edit gamesettings.cfg if you instead want to use the
+default soundsystem picked by FMOD Ex (which may or may not be ALSA).
+------------------
 
 I have provided a simple makefile for building "Those Funny Funguloids!".
 I realise it's not the best way to do things in Linux, and I'm hoping 
